package com.trip.adaptive.repository;

import java.util.List;

import org.springframework.data.jpa.repository.JpaRepository;

import com.trip.adaptive.domain.Route;

public interface RouteRepository extends JpaRepository<Route, Long> {
  List<Route> findByTripId(Long tripId);
}
